tests/SemanticError/Fonctions/Test2/CallParameterBadType.c
int fonction(char stuff){
	return 0;
}

int main(){
	int a;
	a=fonction(6548);
	return a;
}
